--- a/index.html
+++ b/index.html
@@ -208,48 +208,48 @@
     <div class="inner-width">
       <h1 class="section-title">Product</h1>
       <div class="works">
-        <a href="img/works/1.jpg" class="work">
-          <img src="img/works/1.jpg" alt="">
+        <a href="img/works/12.jpeg" class="work">
+          <img src="img/works/12.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
           </div>
         </a>
 
-        <a href="img/works/2.jpg" class="work">
-          <img src="img/works/2.jpg" alt="">
+        <a href="img/works/7.jpeg" class="work">
+          <img src="img/works/7.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
           </div>
         </a>
 
-        <a href="img/works/3.jpg" class="work">
-          <img src="img/works/3.jpg" alt="">
+        <a href="img/works/11.jpeg" class="work">
+          <img src="img/works/11.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
           </div>
         </a>
 
-        <a href="img/works/4.jpg" class="work">
-          <img src="img/works/4.jpg" alt="">
+        <a href="img/works/12.jpeg" class="work">
+          <img src="img/works/12.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
           </div>
         </a>
 
-        <a href="img/works/5.jpg" class="work">
-          <img src="img/works/5.jpg" alt="">
+        <a href="img/works/7.jpeg" class="work">
+          <img src="img/works/7.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
           </div>
         </a>
 
-        <a href="img/works/6.jpg" class="work">
-          <img src="img/works/6.jpg" alt="">
+        <a href="img/works/11.jpeg" class="work">
+          <img src="img/works/11.jpeg" alt="">
           <div class="info">
             <h3>Coming soon</h3>
             <div class="cat">Coming soon</div>
